	* remove lazy-bitfield feature
	* simplified suggest-read-cache feature to not depend on disk threads
	* removed option to disable contiguous receive buffers
	* deprecated public to_hex() and from_hex() functions
	* separated address and port fields in listen alerts
	* added support for parsing new x.pe parameter from BEP 9
	* peer_blocked_alert now derives from peer_alert
	* transitioned exception types to system_error
	* made alerts move-only
	* move files one-by-one when moving storage for a torrent
	* removed RSS support
	* removed feature to resolve country for peers
	* added support for BEP 32, "IPv6 extension for DHT"
	* overhauled listen socket and UDP socket handling, improving multi-home
	  support and bind-to-device
	* added new read_resume_data() function, initializing add_torrent_params
	* removed deprecated fields from add_torrent_params
	* deprecate "resume_data" field in add_torrent_params
	* improved support for bind-to-device
	* deprecated ssl_listen, SSL sockets are specified in listen_interfaces now
	* improved support for listening on multiple sockets and interfaces
	* resume data no longer has timestamps of files
	* require C++11 to build libtorrent

1.1.1 release

	* fix bug in enum_net() for BSD and Mac
	* fix bug in python binding of announce_entry
	* fixed bug related to flag_merge_resume_http_seeds flag in add_torrent_params
	* fixed inverted priority of incoming piece suggestions
	* optimize allow-fast logic
	* fix issue where FAST extension messages were not used during handshake
	* fixed crash on invalid input in http_parser
	* upgraded to libtommath 1.0
	* fixed parsing of IPv6 endpoint with invalid port character separator
	* added limited support for new x.pe parameter from BEP 9
	* fixed dht stats counters that weren't being updated
	* make sure add_torrent_alert is always posted before other alerts for
	  the torrent
	* fixed peer-class leak when settings per-torrent rate limits