@@ -56,9 +56,23 @@ rule linking ( properties * )
 {
 	local result ;
 
+	# ssl=openssl => crypto=libcrypto
+	# this match the previous behavior
+	if <ssl>openssl in $(properties)
+		&& ! <crypto>libcrypto in $(properties)
+	{
+		EXIT "with ssl=openssl the value for crypto must be libcrypto" ;
+	}
+
+	# crypto=commoncrypto => target-os=darwin
+	if <crypto>commoncrypto in $(properties)
+		&& ! <target-os>darwin in $(properties)
+	{
+		EXIT "value of commoncrypto for crypto option is only possible in macosx" ;
+	}
+
 	# openssl libraries, if enabled
-	if <crypto>openssl in $(properties)
-		|| <crypto>openssl-sha1 in $(properties)
+	if <ssl>openssl in $(properties)
 	{
 		# exclude gcc from a regular windows build to make mingw
 		# link against the regular unix library name
@@ -75,14 +89,30 @@ rule linking ( properties * )
 		}
 		else
 		{
-			if <crypto>openssl in $(properties)
-			{
-				result += <library>crypto <library>ssl ;
-			}
-			else
-			{
-				result += <library>crypto ;
-			}
+			result += <library>crypto <library>ssl ;
+		}
+	}
+
+	if <crypto>libcrypto in $(properties)
+		&& ! <ssl>openssl in $(properties)
+	{
+		# exclude gcc from a regular windows build to make mingw
+		# link against the regular unix library name
+		if <target-os>windows in $(properties)
+			&& ! <toolset>gcc in $(properties)
+		{
+			# it should be possible to cleanup this list, but this is safe for now
+			result += <library>ssleay32
+				<library>libeay32
+				<library>advapi32
+				<library>user32
+				<library>shell32
+				<library>gdi32
+			;
+		}
+		else
+		{
+			result += <library>crypto ;
 		}
 	}
 
@@ -103,7 +133,7 @@ rule linking ( properties * )
 	}
 
 	# gcrypt libraries, if enabled
-	if <crypto>gcrypt in $(properties)
+	if <crypto>libgcrypt in $(properties)
 	{
 		# on mac os x, adding the /opt/local/include path
 		# would include openssl headers incompatible with
@@ -330,7 +360,7 @@ rule building ( properties * )
 		result += <source>src/pe_crypto.cpp ;
 	}
 
-	if <crypo>built-in in $(properties)
+	if <crypo>builtin in $(properties)
 	{
 		result += <source>src/sha1.cpp ;
 	}
@@ -463,10 +493,13 @@ feature.compose <encryption>off : <define>TORRENT_DISABLE_ENCRYPTION ;
 feature mutable-torrents : on off : composite propagated link-incompatible ;
 feature.compose <mutable-torrents>off : <define>TORRENT_DISABLE_MUTABLE_TORRENTS ;
 
-feature crypto : built-in openssl openssl-sha1 gcrypt : composite propagated ;
-feature.compose <crypto>openssl : <define>TORRENT_USE_OPENSSL <define>OPENSSL_NO_SSL2 ;
-feature.compose <crypto>openssl-sha1 : <define>TORRENT_USE_OPENSSL_SHA1 ;
-feature.compose <crypto>gcrypt : <define>TORRENT_USE_GCRYPT ;
+feature crypto : builtin libcrypto libgcrypt commoncrypto : composite propagated ;
+feature.compose <crypto>libcrypto : <define>TORRENT_USE_LIBCRYPTO ;
+feature.compose <crypto>libgcrypt : <define>TORRENT_USE_LIBGCRYPT ;
+feature.compose <crypto>commoncrypto : <define>TORRENT_USE_COMMONCRYPTO ;
+
+feature ssl : off openssl : composite propagated ;
+feature.compose <ssl>openssl : <define>TORRENT_USE_OPENSSL <define>OPENSSL_NO_SSL2 ;
 
 feature character-set : unicode ansi : composite propagated link-incompatible ;
 feature.compose <character-set>unicode : <define>_UNICODE <define>UNICODE ;
@@ -503,7 +536,7 @@ variant test_release : release
 	  <inlining>off
 	;
 variant test_debug : debug
-	: <crypto>openssl <logging>on <disk-stats>on
+	: <ssl>openssl <crypto>libcrypto <logging>on <disk-stats>on
 	  <allocator>debug
 	  <invariant-checks>full <boost-link>shared
 	  <export-extra>on <debug-iterators>on <threading>multi <asserts>on
