@@ -134,13 +134,6 @@ POSSIBILITY OF SUCH DAMAGE.
 # endif
 #include <AvailabilityMacros.h>
 
-#if MAC_OS_X_VERSION_MIN_REQUIRED >= 1070
-// on OSX, use the built-in common crypto for built-in
-# if !defined TORRENT_USE_OPENSSL && !defined TORRENT_USE_GCRYPT
-#  define TORRENT_USE_COMMONCRYPTO 1
-# endif // TORRENT_USE_OPENSSL
-#endif // MAC_OS_X_VERSION_MIN_REQUIRED
-
 // execinfo.h is available in the MacOS X 10.5 SDK.
 #if MAC_OS_X_VERSION_MIN_REQUIRED >= 1050
 #define TORRENT_USE_EXECINFO 1
@@ -384,10 +377,6 @@ POSSIBILITY OF SUCH DAMAGE.
 
 #ifndef TORRENT_DEPRECATED
 #define TORRENT_DEPRECATED
-#endif
-
-#ifndef TORRENT_USE_COMMONCRYPTO
-#define TORRENT_USE_COMMONCRYPTO 0
 #endif
 
 #ifndef TORRENT_HAVE_MMAP
